[package]
name = "lapack-with-nalgebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra="0.29.0"

[dependencies.nalgebra-lapack]
version = "0.20.0"
default-features = false
features = [ "openblas" ]
